# BrickEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
BrickEngine/: CMakeLists.txt
BrickEngine/include/: BrickEngine.hpp  Log.hpp  Window.hpp  window.hpp
BrickEngine/src/: BrickEngine.cpp  Log.cpp  Window.cpp  WindowImpl.cpp  WindowOpenGL.cpp  window.cpp
BrickEngine/src/inc/: WindowImpl.hpp  WindowOpenGL.hpp
example/: CMakeLists.txt  conanfile.txt  main.cpp
helper/: build_engine.bat  build_examlpe.bat  clean.bat
